2005-02-16  Marcus Meissner  <marcus@jet.franken.de>

	* usb/libusb.c: also detach the usb-storage driver
	  when we open a USB device. We can support those
	  cameras.

2005-02-12  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* configure.in: fix shell syntax error I introduced
	  in 2002-11 and no one noticed except for the Debian
	  packagers

2005-01-17  Colin Marquardt  <colin@marquardt-home.de>

	* po/ja.po: Update thanks to Takeshi AIHANA.

2005-01-04  Marcus Meissner  <marcus@jet.franken.de>
	
	* libpghoto2_port/gphoto2-port.c, gphoto2-port-info-list.c:
	  Marked up debug strings for translation too.
	  Removed translation markup from function names.

	* po/*.po: make update-po

	* po/ru.po: Merged new russian translations from Vyacheslav Dikonov. 

2004-10-28  Hubert Figuiere  <hfiguiere@teaser.fr>

	* libgphoto2_port/gphoto2-port-log.h: Fix build for gcc 2.95
	  (bug #1055868)

2004-08-22  Marcus Meissner <marcus@jet.franken.de>
	
	* libgphoto_port/gphoto-port.h, gphoto-port-log.h:

	  Added attributes so gcc knows gp_log* are varargs
	  using printf style functions and can warn on bad
	  format strings.

2004-08-22  Marcus Meissner <marcus@jet.franken.de>

	* Detach USB kernel drivers (unless storage or usbfs)
	  before claiming interface. This should help stv680
	  and spca504x cameras (dc2xx driver should be gone
	  from kernel).

2004-01-06  Marcus Meissner <marcus@jet.franken.de>

	* Multiple USB Devices at once support.

2003-12-11  Lutz Mueller <lutz@users.sourceforge.net>

	Patch by Andreas Burmester <a.burmester@hamburg.de>:

	* serial/unix.c: Do not verify the speed change if we set the 
	  speed to 0.

2003-08-16  Patrick Mansfield <patmans@users.sourceforge.net>

	* usb/libusb.c: change the mass storage check to output a debug
	  message and not prevent the camera from being used, as reported
	  by Marcus Meissner, at the least the olympus 5050z shows up as a
	  mass storage device, but works fine with gphoto2.
